--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -5,5 +5,11 @@ Index
 {% endblock title %}
 
 {% block body %}
-<h1>Index Page</h1>
+<div class="flex h-screen">
+    <div class="m-auto">
+        <a class="text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded">Connect
+            Github
+        </a>
+    </div>
+</div>
 {% endblock body %}
