--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -7,7 +7,8 @@ Index
 {% block body %}
 <div class="flex h-screen">
     <div class="m-auto">
-        <a class="text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded">Connect
+        <a href="{% url 'github_connect' %}"
+            class="text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded">Connect
             Github
         </a>
     </div>
